src/kubernetes-raw-canaries/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-canary
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nginx
            version: canary
    template:
        metadata:
            labels:
                app: nginx
                version: canary
        spec:
            containers:
                - name: nginx
                  image: dhinojosa/simple-nginx:1.0.3
                  ports:
                      - containerPort: 80
