src/kubernetes-raw-canaries/deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-stable
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx
            version: stable
    template:
        metadata:
            labels:
                app: nginx
                version: stable
        spec:
            containers:
                - name: nginx
                  image: dhinojosa/simple-nginx:1.0.1
                  ports:
                      - containerPort: 80
